--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
 
         <!--
-        ALL FONT AWSOME ICONS HERE
+        ALL ICONS HERE
         -----
         <i class="fa fa-angle-right" aria-hidden="true"></i>
 
         -->
 
 
-
+    <div class="container">
         <article class="project-container">
             <nav class="project__navbar">
                 <ul class="project__navbar__items">
@@ -35,7 +35,7 @@
                         <a class="project__navbar__item__link" href="#">Home</a>
                     </li>
                     <li class="project__navbar__item">
-                        <a class="project__navbar__item__link" href="#">Projects</a>
+                        <a class="project__navbar__item__link current-tab" href="#">Projects</a>
                     </li>
                     <li class="project__navbar__item">
                         <a class="project__navbar__item__link" href="#">Inbox</a>
@@ -48,8 +48,8 @@
 
                 <ul class="project__navbar__items">
                     <li class="project__navbar__item">
-                        <button>
-                            <a href="#">Upgrade</a>
+                        <button class="navbar__item__btn">
+                            <a  class="navbar__item__btn__link" href="#">Upgrade</a>
                         </button>
                     </li>
 
@@ -141,6 +141,8 @@
                 </section>
             </section>
         </article>
+    </div>
+        
         
     </body>
 </html>
