--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div class="container">
         <article class="project-container">
             <nav class="project__navbar">
+                
                 <ul class="project__navbar__items">
                     <li class="project__navbar__item">
                         <a class="project__navbar__item__link" href="#">Home</a>
@@ -39,7 +40,7 @@
                     </li>
                     <li class="project__navbar__item">
                         <a class="project__navbar__item__link" href="#">Inbox</a>
-                        <div class="dot dot-orange"></div>
+                        <div class="dot dot-pink-dark"></div>
                     </li>
                     <li class="project__navbar__item">
                         <a class="project__navbar__item__link" href="#">Teams</a>
@@ -48,7 +49,7 @@
 
                 <ul class="project__navbar__items">
                     <li class="project__navbar__item">
-                        <button class="navbar__item__btn">
+                        <button class="navbar__item__btn upgrade-btn">
                             <a  class="navbar__item__btn__link" href="#">Upgrade</a>
                         </button>
                     </li>
@@ -62,9 +63,9 @@
 
 
 
-            <section class="">
+            <section class="project-selection">
                 <aside class="projects__sidebar">
-                    <h2>Projects</h2>
+                    <h3 class="projects__sidebar__heading">Projects</h3>
                     <ul class="projects__sidebar__projects">
                         <li class="sidebar__project">
                             <div class="dot dot-yellow"></div>
@@ -77,7 +78,7 @@
                         </li>
 
                         <li class="sidebar__project">
-                            <div class="dot dot-blue-dark"></div>
+                            <div class="dot dot-blue"></div>
                             <a class="sidebar__project__link" href="#">Marketing</a>
                         </li>
 
@@ -92,7 +93,7 @@
                         </li>
 
                         <li class="sidebar__project">
-                            <div class="dot dot-green-orange"></div>
+                            <div class="dot dot-pink-dark"></div>
                             <a class="sidebar__project__link" href="#">Bugs and fixes</a>
                         </li>
 
@@ -105,6 +106,7 @@
                 </aside>
                 <section class="projects">
                     <!--projects-->
+                    <h2>Projects</h2>
                     <ul class="projects__main__items">
                         <li class="projects__main__item">
                             <button class="projects__main__item__btn">M</button>
@@ -126,7 +128,8 @@
                     <!--add projects-->
                     <div class="add-project-container">
                         <button class="projects__main__item__btn add-project-btn">
-                            <i class="fa fa-plus add-project-btn__icon" aria-hidden="true"></i></button>
+                            <i class="fa fa-plus add-project-btn__icon" aria-hidden="true"></i>
+                        </button>
                             <span class="projects__main__item__text">ABC development</span>
                     </div>
                     <!--footer-->
