--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
                         </li>
 
                         <li class="sidebar__project">
-                            <a class="sidebar__project__link view-all-link" href="#">View All</a>
-                            <i class="fa fa-angle-right view-all-link-icon" aria-hidden="true"></i>
-
+                            <button class="view-all-btn">
+                                <a class="sidebar__project__link view-all-link" href="#">View all</a>
+                                <i class="fa fa-angle-right view-all-link-icon" aria-hidden="true"></i>
+                            </button>
                         </li>
                     </ul>
                 </aside>
