--- a/index.html
+++ b/index.html
@@ -33,29 +33,29 @@
                 
                 <ul class="project__navbar__items">
                     <li class="project__navbar__item">
-                        <a class="project__navbar__item__link" href="#">Home</a>
+                        <a class="project__navbar__item__link clickable-hover-1" href="#">Home</a>
                     </li>
                     <li class="project__navbar__item">
-                        <a class="project__navbar__item__link current-tab" href="#">Projects</a>
+                        <a class="project__navbar__item__link clickable-hover-1 current-tab" href="#">Projects</a>
                     </li>
                     <li class="project__navbar__item">
-                        <a class="project__navbar__item__link" href="#">Inbox</a>
+                        <a class="project__navbar__item__link clickable-hover-1" href="#">Inbox</a>
                         <div class="dot dot-pink-dark"></div>
                     </li>
                     <li class="project__navbar__item">
-                        <a class="project__navbar__item__link" href="#">Teams</a>
+                        <a class="project__navbar__item__link clickable-hover-1" href="#">Teams</a>
                     </li>
                 </ul>
 
                 <ul class="project__navbar__items">
                     <li class="project__navbar__item">
                         <button class="navbar__item__btn upgrade-btn">
-                            <a  class="navbar__item__btn__link" href="#">Upgrade</a>
+                            <a  class="navbar__item__btn__link clickable-hover-1" href="#">Upgrade</a>
                         </button>
                     </li>
 
                     <li class="project__navbar__item">
-                        <a class="profile-link" href="#">JG</a>
+                        <a class="profile-link clickable-hover-1" href="#">JG</a>
                     </li>
                 </ul>
             </nav>
@@ -69,36 +69,36 @@
                     <ul class="projects__sidebar__projects">
                         <li class="sidebar__project">
                             <div class="dot dot-yellow"></div>
-                            <a class="sidebar__project__link" href="#">board development</a>
+                            <a class="sidebar__project__link clickable-hover-1" href="#">board development</a>
                         </li>
 
                         <li class="sidebar__project">
                             <div class="dot dot-orange"></div>
-                            <a class="sidebar__project__link" href="#">Featured lists</a>
+                            <a class="sidebar__project__link clickable-hover-1" href="#">Featured lists</a>
                         </li>
 
                         <li class="sidebar__project">
                             <div class="dot dot-blue"></div>
-                            <a class="sidebar__project__link" href="#">Marketing</a>
+                            <a class="sidebar__project__link clickable-hover-1" href="#">Marketing</a>
                         </li>
 
                         <li class="sidebar__project">
                             <div class="dot dot-purple"></div>
-                            <a class="sidebar__project__link" href="#">ABC development</a>
+                            <a class="sidebar__project__link clickable-hover-1" href="#">ABC development</a>
                         </li>
 
                         <li class="sidebar__project">
                             <div class="dot dot-green-lime"></div>
-                            <a class="sidebar__project__link" href="#">Topics</a>
+                            <a class="sidebar__project__link clickable-hover-1" href="#">Topics</a>
                         </li>
 
                         <li class="sidebar__project">
                             <div class="dot dot-pink-dark"></div>
-                            <a class="sidebar__project__link" href="#">Bugs and fixes</a>
+                            <a class="sidebar__project__link clickable-hover-1" href="#">Bugs and fixes</a>
                         </li>
 
                         <li class="sidebar__project">
-                            <button class="view-all-btn">
+                            <button class="view-all-btn clickable-hover-1">
                                 <a class="sidebar__project__link view-all-link" href="#">View all</a>
                                 <i class="fa fa-angle-right view-all-link-icon" aria-hidden="true"></i>
                             </button>
@@ -107,38 +107,40 @@
                 </aside>
                 <section class="projects">
                     <!--projects-->
-                    <h2>Projects</h2>
+                    <h2 class="projects__heading">Projects</h2>
                     <ul class="projects__main__items">
                         <li class="projects__main__item">
-                            <button class="projects__main__item__btn">M</button>
+                            <button class="projects__main__item__btn clickable-hover-1">M</button>
                             <span class="projects__main__item__text">Marketing</span>
                         </li>
                         <li class="projects__main__item">
-                            <button class="projects__main__item__btn">Fl</button>
+                            <button class="projects__main__item__btn clickable-hover-1">Fl</button>
                             <span class="projects__main__item__text">Feature lists</span>
                         </li>
                         <li class="projects__main__item">
-                            <button class="projects__main__item__btn">Bd</button>
+                            <button class="projects__main__item__btn clickable-hover-1">Bd</button>
                             <span class="projects__main__item__text">Board development</span>
                         </li>
                         <li class="projects__main__item">
-                            <button class="projects__main__item__btn">Ab</button>
+                            <button class="projects__main__item__btn clickable-hover-1">Ab</button>
                             <span class="projects__main__item__text">ABC development</span>
                         </li>
                     </ul>
                     <!--add projects-->
                     <div class="add-project-container">
-                        <button class="projects__main__item__btn add-project-btn">
-                            <i class="fa fa-plus add-project-btn__icon" aria-hidden="true"></i>
-                        </button>
-                            <span class="projects__main__item__text">ABC development</span>
+                        <div class="add-project">
+                            <button class="projects__main__item__btn add-project-btn clickable-hover-1">
+                                <i class="fa fa-plus add-project-btn__icon" aria-hidden="true"></i>
+                            </button>
+                                <span class="projects__main__item__text">Add a project</span>
+                        </div>
                     </div>
                     <!--footer-->
                     <footer class="projects__footer">
-                        <a class="projects__footer__link" hef="#">
-                            <i class="fa fa-ellipsis-h footer__link__icon" aria-hidden="true"></i>                        </a>
-                        <a class="projects__footer__link" hef="#">Privacy</a>
-                        <a class="projects__footer__link" hef="#">
+                        <a class="projects__footer__link clickable-hover-1" hef="#">
+                            <i class="fa fa-ellipsis-h footer__link__icon " aria-hidden="true"></i>                        </a>
+                        <a class="projects__footer__link clickable-hover-1" hef="#">Privacy</a>
+                        <a class="projects__footer__link question-mark-link clickable-hover-1" hef="#">
                             <i class="fa fa-question footer__link__icon" aria-hidden="true"></i>
                         </a>
                     </footer>
